# libxc

./: CMakeLists.txt  Dockerfile  README.md  README_GPU.md  configure.ac  hip-build-cmake-command  libxc.bib
.github/workflows/: c-cpp.yaml
scripts/: get_funcs.pl  get_references.pl
scripts/cuda/: get_funcs.pl
src/: Makefile.am  bessel.c  bessel.cu  cuda.h  dvc_references.h  dvc_util.h  expint_e1.c  expint_e1.cu  expint_e1.h  func_info.c  func_reference.c  functionals.c  functionals.cu  functionals.cuh  functionals.hiph  functionals_device.cpp  functionals_device.cu  functionals_device.cuh  functionals_device.hiph  gga.c  gga.cpp  gga.cu  gga_c_acgga.c  gga_c_acgga.cu  gga_c_acggap.c  gga_c_acggap.cpp  gga_c_am05.c  gga_c_am05.cpp  gga_c_bmk.c  gga_c_bmk.cu  gga_c_cs1.c  gga_c_cs1.cu  gga_c_ft97.c  gga_c_ft97.cpp  gga_c_gapc.c  gga_c_gapc.cpp  gga_c_gaploc.c  gga_c_gaploc.cu  gga_c_hcth_a.c  gga_c_hcth_a.cpp  (+599 more)
src/cuda/: Makefile.am  README.md  bessel.cu  expint_e1.cu  func_info.cu  functionals.cu  gga.cu  gga_c_acgga.cu  gga_c_acggap.cu  gga_c_am05.cu  gga_c_bmk.cu  gga_c_cs1.cu  gga_c_ft97.cu  gga_c_gapc.cu  gga_c_gaploc.cu  gga_c_hcth_a.cu  gga_c_lm.cu  gga_c_lyp.cu  gga_c_op_b88.cu  gga_c_op_g96.cu  gga_c_op_pbe.cu  gga_c_op_pw91.cu  gga_c_op_xalpha.cu  gga_c_optc.cu  gga_c_p86.cu  gga_c_pbe.cu  gga_c_pbeloc.cu  gga_c_pw91.cu  gga_c_q2d.cu  gga_c_regtpss.cu  gga_c_revtca.cu  gga_c_scan_e0.cu  gga_c_sg4.cu  gga_c_sogga11.cu  gga_c_tca.cu  gga_c_w94.cu  gga_c_wi.cu  gga_c_wl.cu  gga_c_zpbeint.cu  gga_c_zvpbeint.cu  (+203 more)
src/maple2c/gga_exc/: gga_c_acgga.c  gga_c_acggap.c  gga_c_am05.c  gga_c_bmk.c  gga_c_cs1.c  gga_c_ft97.c  gga_c_ft97.cu  gga_c_gapc.c  gga_c_gaploc.c  gga_c_hcth_a.c  gga_c_lm.c  gga_c_lyp.c  gga_c_op_b88.c  gga_c_op_g96.c  gga_c_op_pbe.c  gga_c_op_pw91.c  gga_c_op_xalpha.c  gga_c_optc.c  gga_c_p86.c  gga_c_pbe.c  gga_c_pbeloc.c  gga_c_pw91.c  gga_c_q2d.c  gga_c_regtpss.c  gga_c_revtca.c  gga_c_scan_e0.c  gga_c_sg4.c  gga_c_sogga11.c  gga_c_tca.c  gga_c_w94.c  gga_c_wi.c  gga_c_wl.c  gga_c_zpbeint.c  gga_c_zvpbeint.c  gga_c_zvpbeloc.c  gga_k_apbe.c  gga_k_apbeint.c  gga_k_dk.c  gga_k_exp4.c  gga_k_lc94.c  (+74 more)
src/maple2c/lda_exc/: lda_c_1d_csc.c  lda_c_1d_loos.c  lda_c_2d_amgb.c  lda_c_2d_prm.c  lda_c_chachiyo.c  lda_c_gk72.c  lda_c_gombas.c  lda_c_hl.c  lda_c_lp96.c  lda_c_ml1.c  lda_c_pk09.c  lda_c_pmgb06.c  lda_c_pw.c  lda_c_pz.c  lda_c_rc04.c  lda_c_rpa.c  lda_c_vwn.c  lda_c_vwn_1.c  lda_c_vwn_2.c  lda_c_vwn_3.c  lda_c_vwn_4.c  lda_c_vwn_rpa.c  lda_c_wigner.c  lda_k_gds08_worker.c  lda_k_tf.c  lda_k_zlp.c  lda_x.c  lda_x_1d_exponential.c  lda_x_1d_exponential.cu  lda_x_1d_soft.c  lda_x_1d_soft.cu  lda_x_2d.c  lda_x_erf.c  lda_x_rel.c  lda_xc_1d_ehwlrg.c  lda_xc_bn05.c  lda_xc_ksdt.c  lda_xc_teter93.c  lda_xc_zlp.c
src/maple2c/lda_vxc/: lda_xc_tih.c
src/maple2c/mgga_exc/: hyb_mgga_x_dldf.c  hyb_mgga_x_m05.c  hyb_mgga_xc_wb97mv.c  mgga_c_b88.c  mgga_c_bc95.c  mgga_c_cs.c  mgga_c_kcis.c  mgga_c_m05.c  mgga_c_m06l.c  mgga_c_m08.c  mgga_c_pkzb.c  mgga_c_revscan.c  mgga_c_revtpss.c  mgga_c_scan.c  mgga_c_tpss.c  mgga_c_tpssloc.c  mgga_c_vsxc.c  mgga_k_pc07.c  mgga_x_br89_explicit.c  mgga_x_gvt4.c  mgga_x_gx.c  mgga_x_lta.c  mgga_x_m06l.c  mgga_x_m08.c  mgga_x_m11.c  mgga_x_m11_l.c  mgga_x_mbeef.c  mgga_x_mbeefvdw.c  mgga_x_mk00.c  mgga_x_mn12.c  mgga_x_ms.c  mgga_x_msb.c  mgga_x_mvs.c  mgga_x_mvsb.c  mgga_x_pbe_gx.c  mgga_x_pkzb.c  mgga_x_regtpss.c  mgga_x_rtpss.c  mgga_x_sa_tpss.c  mgga_x_scan.c  (+9 more)
testsuite/: CMakeLists.txt  xc-error.c  xc-regression.c  xc-regression.cpp  xc-regression.cu  xc-run_testsuite
testsuite/jobscripts/: BrOH_LDA_X_unpol_0.out  BrOH_LDA_X_unpol_1.out  BrOH_LDA_X_unpol_2.out  ORNL_Summit_LibXC_LDA_X_BrOH.sh  ORNL_Summit_LibXC_all.sh  README.md  libxc.oe411334
testsuite/jobscripts/gga_c/: ORNL_Summit_LibXC_GGA_C.sh
testsuite/jobscripts/gga_k/: ORNL_Summit_LibXC_GGA_K.sh
testsuite/jobscripts/gga_x/: ORNL_Summit_LibXC_GGA_X.sh
testsuite/jobscripts/gga_xc/: ORNL_Summit_LibXC_GGA_XC.sh
testsuite/jobscripts/hyb_gga_x/: ORNL_Summit_LibXC_Hyb_GGA_X.sh
testsuite/jobscripts/hyb_gga_xc/: ORNL_Summit_LibXC_Hyb_GGA_XC.sh
testsuite/jobscripts/hyb_mgga_x/: ORNL_Summit_LibXC_Hyb_MGGA_X.sh
testsuite/jobscripts/hyb_mgga_xc/: ORNL_Summit_LibXC_Hyb_MGGA_XC.sh
testsuite/jobscripts/lda_c/: ORNL_Summit_LibXC_LDA_C.sh
testsuite/jobscripts/lda_k/: ORNL_Summit_LibXC_LDA_K.sh
testsuite/jobscripts/lda_x/: ORNL_Ascent_LibXC_LDA_X.sh  ORNL_Summit_LibXC_LDA_X.sh
testsuite/jobscripts/lda_xc/: ORNL_Summit_LibXC_LDA_XC.sh
testsuite/jobscripts/mgga_c/: ORNL_Summit_LibXC_MGGA_C.sh
testsuite/jobscripts/mgga_k/: ORNL_Summit_LibXC_MGGA_K.sh
testsuite/jobscripts/mgga_x/: ORNL_Summit_LibXC_MGGA_X.sh
testsuite/jobscripts/mgga_xc/: ORNL_Summit_LibXC_MGGA_XC.sh
